--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 </head>
 
 <body>
-    
-<div id="rene" class="container">
+
+<div class="container">
     <!-- Forside -->
-    <div class="row">
-        <div class="col-sm-6 forside">
+    <div class="row forside">
+        <div class="col-xs-12 col-sm-6 forsideBilde">
             <img src="img/01.jpg" alt="forside_bilde">
         </div>
-        <div class="col-sm-6 forside">
+        <div class="col-xs-12 col-sm-6 forsideTekst">
             <p id="forside_tema"> TEMA </p>
             <h2 id="forside_tittel"> OVERSKRIFT </h2>
             <p id="forside_innhold"> INNHOLD </p>
@@ -40,7 +40,7 @@
             <p id="dybde_innhold"> LOREM IPSUM LOREM IPSUM  </p>
             <button type="button">LES ARTIKKELEN</button>
         </div>
-        <div class="col-sm-6 forside">
+        <div class="col-sm-6">
             <img src="img/01.jpg" alt="forside_bilde">
         </div>
     </div>
