Started styling index

--- a/index.html
+++ b/index.html
@@ -14,135 +14,165 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheets/custom.css">
 
+
 </head>
 
 <body>
 
-<div class="container">
+
+<div class="fullw-blue">
+    <div class="container">
+
     <!-- Forside -->
-    <div class="row forside testing">
-        <div class="col-xs-12 col-sm-6 forsideBilde">
-            <img src="img/01.jpg" alt="forside_bilde">
-        </div>
-        <div class="col-xs-12 col-sm-6 forsideTekst">
-            <p id="forside_tema"> TEMA </p>
-            <h2 id="forside_tittel"> OVERSKRIFT </h2>
-            <p id="forside_innhold"> INNHOLD </p>
-            <button type="button">LES ARTIKKELEN</button>
+        <div class="row forside">
+            <div class="col-sm-6 forsideBilde">
+                <img src="img/01.jpg" class="img-responsive">
+            </div>
+            <div class="col-sm-6 forsideTekst">
+                <p id="forside_tema"><u> Tema - Det nye arbeidslivet - 1/4 </u></p>
+                <h2 id="forside_tittel"> SAMFUNNSENDRINGER OG ARBEIDSLIV </h2>
+                <p id="forside_innhold"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                <button type="button" class="btn btn-default">LES MER</button>
+            </div>
         </div>
     </div>
+</div>
 
-    <!-- Dybdeartikkel -->
-    <div class="row">
-        <div class="col-sm-6">
-            <p id="dybde_tema"> Dybdeartikkel </p>
-            <h2 id="dybde_tittel"> TITTEL PÅ UTGAVENS HOVEDARTIKKEL </h2>
-            <p id="dybde_innhold"> LOREM IPSUM LOREM IPSUM  </p>
-            <button type="button">LES ARTIKKELEN</button>
+<div class="fullw-grey">
+    <div class="container">
+        <!-- Dybdeartikkel -->
+        <div class="row dybdeartikkel">
+            <div class="col-sm-6">
+                <p id="dybde_tema"> Dybdeartikkel </p>
+                <h2 id="dybde_tittel"> TITTEL PÅ UTGAVENS HOVEDARTIKKEL </h2>
+                <p id="dybde_innhold"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
+                <button type="button" class="btn btn-default">LES MER</button>
+            </div>
+            <div class="col-sm-6">
+                <img src="img/02.jpg" class="img-responsive">
+            </div>
         </div>
-        <div class="col-sm-6">
-            <img src="img/01.jpg" alt="forside_bilde">
-        </div>
-    </div>
 
-    <!-- INNHOLD -->
-    <div class="row">
-        <div class="col-sm-3 faste_spalte">
-            <h4>Faste spalte</h4>
-            <p>Redaktøren har ordet. Foreningens leder har ordet. Hallo, Samfunnsviter.</p>
-        </div>
-        <div class="col-sm-3 ung">
-            <h4>Ung</h4>
-            <p>Fremtidens teknologi og et nytt arbeidsliv. En god hjelper dersom man er langtidsyk.</p>
-        </div>
-        <div class="col-sm-3 dybdeartikkel">
-            <h4>Dybdeartikkel</h4>
-            <p>Samfunnsendringer og arbeidsliv. ingen kan trylle frem arbeidsplasser. Om konkurranse, fagforeninger, skatt og ledelse.</p>
-        </div>
-        <div class="col-sm-3 aktuelt">
-            <h4>Aktuelt</h4>
-            <p>UDI´s bratte læringskurve. Bruk av IKT gir bedre læring. internett som demokratibygger. Tar skrivende roboter over journalistjobber?3</p>
+        <div class="hr-1"></div>
+
+        <!-- INNHOLD -->
+        <h2>Innhold</h2>
+        <div class="row dybdeartikkel">
+            <div class="col-sm-3 faste_spalte">
+                <h4>Faste spalte</h4>
+                <p>Redaktøren har ordet. Foreningens leder har ordet. Hallo, Samfunnsviter.</p>
+            </div>
+            <div class="col-sm-3 ung">
+                <h4>Ung</h4>
+                <p>Fremtidens teknologi og et nytt arbeidsliv. En god hjelper dersom man er langtidsyk.</p>
+            </div>
+            <div class="col-sm-3 dybde_1">
+                <h4>Dybdeartikkel</h4>
+                <p>Samfunnsendringer og arbeidsliv. ingen kan trylle frem arbeidsplasser. Om konkurranse, fagforeninger, skatt og ledelse.</p>
+            </div>
+            <div class="col-sm-3 aktuelt_1">
+                <h4>Aktuelt</h4>
+                <p>UDI´s bratte læringskurve. Bruk av IKT gir bedre læring. internett som demokratibygger. Tar skrivende roboter over journalistjobber?3</p>
+            </div>
         </div>
     </div>
+</div>
+
+    <div class="container">
 
     <!-- ARTIKLER -->
-    <div class="row">
-        <div class="col-sm-6 dybde">
-            <div class="col-sm-6 dybde">
-                <h2>Samfunnsendringer og arbeidsliv</h2>
-                <img src="#">
+    <div class="row colSpace">
+        <div class="col-sm-6">
+            <div class="row">
+                <div class="col-sm-12">
+                    <p id="tema">dybde</p>
+                    <h4>Samfunnsendringer og arbeidsliv</h4>
+                </div>
             </div>
-            <div class="col-sm-6 dybde">
-                <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
-                <button type="button">LES</button>
+            <div class="row">
+                <div class="col-sm-12 dybde">
+                    <div class="col-sm-6 ">
+                        <img src="img/01.jpg" class="img-responsive">
+                    </div>
+                    <div class="col-sm-6">
+                        <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                        <button type="button">LES</button>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-sm-3 redaktøren_har_ordet">
-            <h4>Redaktøren_har_ordet</h4>
-            <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
-            <button type="button">LES</button>
+
+        <div class="col-sm-3">
+            <div class="row">
+                <div class="col-sm-12">
+                    <p id="tema">Redaktøren har ordet</p>            
+                    <h4>Redaktøren_har_ordet</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 harOrdet">
+                    <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                    <button type="button">LES</button>
+                </div>
+            </div>
         </div>
-        <div class="col-sm-3 aktuelt">
-            <h4>Aktuelt</h4>
-            <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
-            <button type="button">LES</button>
+
+        <div class="col-sm-3">
+            <div class="row">
+                <div class="col-sm-12">
+                    <p id="tema">Aktuelt</p>  
+                    <h4>UDIs bratte læringskurve</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 aktuelt">
+                    <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                    <button type="button">LES</button>
+                </div>
+            </div>
         </div>
     </div>
 
-
-    <div class="row">
-        <div class="col-sm-3 aktuelt">
-            <h4>Aktuelt</h4>
-            <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
-            <button type="button">LES</button>
+        <!-- FREMHEVET ARTIKKEL -->
+    <div class="row colSpace">
+        <div class="col-sm-6 fremhevet">
+        <img src="img/02.jpg" class="img-responsive">
         </div>
-        <div class="col-sm-6 ung">
-            <div class="col-sm-6 ung">
-                <h2>Fremtidens teknologi og et nytt arbeidsliv</h2>
-                <img src="#">
-            </div>
-            <div class="col-sm-6 ung">
-                <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
-                <button type="button">LES</button>
-            </div>
-        </div>
-        <div class="col-sm-3 aktuelt">
-            <h4>Aktuelt</h4>
-            <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
-            <button type="button">LES</button>
-        </div>
-    </div>
-
-    <!-- FREMHEVET ARTIKKEL -->
-    <div class="row">
-        <div class="col-sm-6">
-            <img src="#">
-        </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 fremhevetText">
             <p id="dybde_tema"> Dybde </p>
             <h2 id="dybde_tittel"> FREMHEVET ARTIKKEL</h2>
             <p id="dybde_innhold"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
-            <button type="button">LES ARTIKKELEN</button>
+            <button type="button" class="btn btn-default">LES MER</button>
         </div>
     </div>
 
     <!-- SAMFUNNSVITERNE -->
-    <div class="row">
+    <div class="row colSpace">
         <div class="col-sm-6 samfunnsviterne">
-            <img src="#">
+            <img src="img/03.jpg" class="img-responsive">
             <p><b>Vi viser vei for våre medlemmer</b></p>
-            <p>lorem ipsum</p>  
+            <p>Er du en samfunnsviter eller humanist med utdanning på masterniå, så hører du hjemme hos oss! Våre medlemmer skal være trygge på at vi er en pådriver fpr deres lønns- og arbeidsbetingelser - at vi aktivt jobber for å heve deres lønnsnivåer og for æ fremme deres økonomiske interesser og faglige kompetanse.</p>  
             <button type="button">LES MER PÅ SAMFUNNSVITERNE.NO</button>  
         </div>
-        <div class="col-sm-6 samfunnsviterne">
+        <div class="col-sm-6 samfunnsviterneFordeler">
             <ul>
-                <li>Medlemskap</li>
-                <li>Medlemsfordeler</li>
-                <li>Kurs og aktiviteter</li>
-                <li>Arbeid og karriere</li>                
+                <li> <img src="img/01.jpg" style="height : 25px;"> Medlemskap </li>
+                <li> <img src="img/01.jpg" style="height : 25px;"> Medlemsfordeler</li>
+                <li> <img src="img/01.jpg" style="height : 25px;"> Kurs og aktiviteter</li>
+                <li> <img src="img/01.jpg" style="height : 25px;"> Arbeid og karriere</li>                
             </ul>
         </div>        
     </div>
+
+
+
+
+
+
+
+
+
+
 
     <!-- ARTIKLER DEL 2 -->
     <div class="row">
@@ -189,14 +219,81 @@
             <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
             <button type="button">LES</button>
         </div>
+
+        <div class="row">
+            <div class="col-sm-12">
+                <h4>Annonse</h4>
+            </div>
     </div>
 
+
+
+
+        <!-- FREMHEVET ARTIKKEL -->
     <div class="row">
-        <div class="col-sm-12">
-            <h4>Annonse</h4>
+        <div class="col-sm-6">
+        <img src="img/01.jpg" class="img-responsive">
+        </div>
+        <div class="col-sm-6">
+            <p id="dybde_tema"> Dybde </p>
+            <h2 id="dybde_tittel"> FREMHEVET ARTIKKEL</h2>
+            <p id="dybde_innhold"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
+            <button type="button">LES ARTIKKELEN</button>
         </div>
     </div>
+
+    <!-- SAMFUNNSVITERNE -->
+    <div class="row">
+        <div class="col-sm-6 samfunnsviterne">
+            <img src="#">
+            <p><b>Vi viser vei for våre medlemmer</b></p>
+            <p>lorem ipsum</p>  
+            <button type="button">LES MER PÅ SAMFUNNSVITERNE.NO</button>  
+        </div>
+        <div class="col-sm-6 samfunnsviterne">
+            <ul>
+                <li>Medlemskap</li>
+                <li>Medlemsfordeler</li>
+                <li>Kurs og aktiviteter</li>
+                <li>Arbeid og karriere</li>                
+            </ul>
+        </div>        
+    </div>
+
+
+
+<!-- NOT STARTED YET -->
+
+    <div class="row">
+        <div class="col-sm-3 aktuelt">
+            <h4>Aktuelt</h4>
+            <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+            <button type="button">LES</button>
+        </div>
+        <div class="col-sm-6 ung">
+            <div class="col-sm-6 ung">
+                <h2>Fremtidens teknologi og et nytt arbeidsliv</h2>
+                <img src="img/01.jpg" class="img-responsive">  
+            </div>
+            <div class="col-sm-6 ung">
+                <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                <button type="button">LES</button>
+            </div>
+        </div>
+        <div class="col-sm-3 aktuelt">
+            <h4>Aktuelt</h4>
+            <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+            <button type="button">LES</button>
+        </div>
+    </div>
+
+
+
 
 </body>
 
 </html>
+
+
+
+
