--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 
+    <meta charset="UTF-8">
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -12,7 +14,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/custom.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/custom.css" />
 
 
 </head>
@@ -23,16 +25,16 @@
 <div class="fullw-blue">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 forside">
+            <div class="col-sm-12 magFront">
                 <div class="row">
-                    <div class="col-sm-6 col-xs-12">
+                    <div class="col-sm-6 col-xs-12 magImg">
                         <div style="background-image: url('img/04.jpg');" class="res-img"></div>
                     </div>
-                    <div class="col-sm-6 col-xs-12 forsideTekst">
+                    <div class="col-sm-6 col-xs-12 magText">
                         <p id="category"><u> Tema - Det nye arbeidslivet - 1/4 </u></p>
                         <h2 id="title"> SAMFUNNSENDRINGER OG ARBEIDSLIV </h2>
                         <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
-                        <button type="button" class="sf-button">LES MER</button>
+                        <button type="button" class="sfButton">LES MER</button>
                     </div>
                 </div>
             </div>
@@ -44,13 +46,13 @@
 <div class="fullw-grey">
     <div class="container">
         <div class="row"> 
-            <div class="col-sm-12 dybdeartikkel">
+            <div class="col-sm-12 hovedArt">
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-6 hovedArtText">
                         <p id="category"> Dybdeartikkel </p>
                         <h2 id="title"> TITTEL PÅ UTGAVENS HOVEDARTIKKEL </h2>
                         <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
-                        <button type="button" class="sf-button2">LES ARTIKKELEN</button>
+                        <button type="button" class="sfButton2">LES ARTIKKELEN</button>
                     </div>
                     <div class="col-sm-6">
                         <img src="img/02.jpg" class="img-responsive">
@@ -63,20 +65,20 @@
 
     <!-- INNHOLD -->
         <h2>Innhold</h2>
-        <div class="row dybdeartikkel">
-            <div class="col-sm-3 faste_spalte">
+        <div class="row hovedArtInnhold">
+            <div class="col-sm-6 col-md-3 fastSpalteArt">
                 <h4>Faste spalte</h4>
                 <p>Redaktøren har ordet. Foreningens leder har ordet. Hallo, Samfunnsviter.</p>
             </div>
-            <div class="col-sm-3 ung">
+            <div class="col-sm-6 col-md-3 ungArt">
                 <h4>Ung</h4>
                 <p>Fremtidens teknologi og et nytt arbeidsliv. En god hjelper dersom man er langtidsyk.</p>
             </div>
-            <div class="col-sm-3 dybde_1">
+            <div class="col-sm-6 col-md-3 dybdeArt">
                 <h4>Dybdeartikkel</h4>
                 <p>Samfunnsendringer og arbeidsliv. ingen kan trylle frem arbeidsplasser. Om konkurranse, fagforeninger, skatt og ledelse.</p>
             </div>
-            <div class="col-sm-3 aktuelt_1">
+            <div class="col-sm-6 col-md-3 aktueltArt">
                 <h4>Aktuelt</h4>
                 <p>UDI´s bratte læringskurve. Bruk av IKT gir bedre læring. internett som demokratibygger. Tar skrivende roboter over journalistjobber?3</p>
             </div>
@@ -85,7 +87,7 @@
 </div>
 
     <!-- ARTIKLER -->
-<div class="container spaceX">
+<div class="container">
     <div class="row">
         <!-- DYBDE (MED BILDE) ARTIKKEL -->
         <div class="col-sm-12 col-md-6">
@@ -224,7 +226,7 @@
 </div>
 
     <!-- FREMHEVET ARTIKKEL -->
-<div class="container spaceX">
+<div class="container">
     <div class="row">
         <div class="col-sm-12">
             <div class="row">
@@ -235,7 +237,7 @@
                 <p id="dybde_tema"> Dybde </p>
                 <h2 id="dybde_tittel"> FREMHEVET ARTIKKEL</h2>
                 <p id="dybde_innhold"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
-                <button type="button" class="sf-button2">LES MER</button>
+                <button type="button" class="sfButton2">LES MER</button>
             </div>
             </div>
         </div>
@@ -243,20 +245,20 @@
 </div>
 
     <!-- SAMFUNNSVITERNE -->
-    <div class="container spaceX">
-    <div class="row colSpace">
+    <div class="container ">
+    <div class="row ">
         <div class="samfunnBox">
             <div class="col-sm-6 samfunnsviterne">
                 <img src="img/03.jpg" class="img-responsive">
                 <p><b>Vi viser vei for våre medlemmer</b></p>
                 <p>Er du en samfunnsviter eller humanist med utdanning på masterniå, så hører du hjemme hos oss! Våre medlemmer skal være trygge på at vi er en pådriver fpr deres lønns- og arbeidsbetingelser - at vi aktivt jobber for å heve deres lønnsnivåer og for æ fremme deres økonomiske interesser og faglige kompetanse.</p>  
-                <button type="button" class="sf-button2">LES MER</button>
+                <button type="button" class="sfButton2">LES MER</button>
             </div>
             <div class="col-sm-6 samfunnsviterneFordeler">
-                    <li> <img src="img/01.jpg" > <h4 id="singleFordel">Medlemskap</h4> </li>
-                    <li> <img src="img/01.jpg" > <h4 id="singleFordel">Medlemsfordeler</h4> </li>
-                    <li> <img src="img/01.jpg" > <h4 id="singleFordel">Kurs og aktiviteter</h4></li>
-                    <li> <img src="img/01.jpg" > <h4 id="singleFordel">Arbeid og karriere</h4></li>                
+                    <li> <img src="img/icon-01.png" > <h4 id="singleFordel">Medlemskap <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
+                    <li> <img src="img/icon-02.png" > <h4 id="singleFordel">Medlemsfordeler <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
+                    <li> <img src="img/icon-03.png" > <h4 id="singleFordel">Kurs og aktiviteter <span class="glyphicon glyphicon-arrow-right"> </h4></li>
+                    <li> <img src="img/icon-04.png" > <h4 id="singleFordel">Arbeid og karriere <span class="glyphicon glyphicon-arrow-right"> </h4></li>                
             </div>        
         </div>
     </div>
@@ -265,12 +267,52 @@
 
 
     <!-- ANNONSE -->
-
-    <div class="row">
-        <div class="col-xs-12 annonse">
-            <h2 class="text-center">[Annonse]</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 annonse">
+                <h2 class="text-center">[Annonse]</h2>
+            </div>
         </div>
     </div>
+
+
+    <!-- FOOTER -->
+    <div class="fullw-db"> 
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 footer">
+                    <div class="row">            
+                        <div class="col-sm-4">
+                            <h3>Hold deg oppdatert</h3>
+                                <form class="form-inline">
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" id="#" placeholder="Din e-post">
+                                    </div>
+                                    <button type="submit" class="form-control">SEND</button>
+                                </form>
+                            
+                        </div>
+                        <div class="col-sm-4">
+                            <h3>Kontakt oss</h2>
+                            <p>Telefon 12 34 56 78</p>
+                            <p>E-post post@samfunnsviterne.no</p>
+                        </div>
+                        <div class="col-sm-4">
+                            <img src="img/03.jpg" class="img-responsive">
+                        </div>
+                    </div>
+                        <div class="row">
+                            <div class="col-sm-12 copyright">
+                                <p>&copy; 2017 Samfunnsviterne</p>
+                            </div>
+                        </div>
+                </div>
+            </div>                
+        </div>
+    </div>
+
+</div>
+
 
 </body>
 </html>
