added som fonts

--- a/index.html
+++ b/index.html
@@ -65,22 +65,24 @@
 
     <!-- INNHOLD -->
         <h2>Innhold</h2>
-        <div class="row hovedArtInnhold">
-            <div class="col-sm-6 col-md-3 fastSpalteArt">
-                <h4>Faste spalte</h4>
-                <p>Redaktøren har ordet. Foreningens leder har ordet. Hallo, Samfunnsviter.</p>
-            </div>
-            <div class="col-sm-6 col-md-3 ungArt">
-                <h4>Ung</h4>
-                <p>Fremtidens teknologi og et nytt arbeidsliv. En god hjelper dersom man er langtidsyk.</p>
-            </div>
-            <div class="col-sm-6 col-md-3 dybdeArt">
-                <h4>Dybdeartikkel</h4>
-                <p>Samfunnsendringer og arbeidsliv. ingen kan trylle frem arbeidsplasser. Om konkurranse, fagforeninger, skatt og ledelse.</p>
-            </div>
-            <div class="col-sm-6 col-md-3 aktueltArt">
-                <h4>Aktuelt</h4>
-                <p>UDI´s bratte læringskurve. Bruk av IKT gir bedre læring. internett som demokratibygger. Tar skrivende roboter over journalistjobber?3</p>
+        <div class="row">
+            <div class="hovedArtInnhold">
+                <div class="col-sm-6 col-md-3 fastSpalteArt">
+                    <h5>Faste spalte</h5>
+                    <p>Redaktøren har ordet. Foreningens leder har ordet. Hallo, Samfunnsviter.</p>
+                </div>
+                <div class="col-sm-6 col-md-3 ungArt">
+                    <h5>Ung</h5>
+                    <p>Fremtidens teknologi og et nytt arbeidsliv. En god hjelper dersom man er langtidsyk.</p>
+                </div>
+                <div class="col-sm-6 col-md-3 dybdeArt">
+                    <h5>Dybdeartikkel</h5>
+                    <p>Samfunnsendringer og arbeidsliv. ingen kan trylle frem arbeidsplasser. Om konkurranse, fagforeninger, skatt og ledelse.</p>
+                </div>
+                <div class="col-sm-6 col-md-3 aktueltArt">
+                    <h5>Aktuelt</h5>
+                    <p>UDI´s bratte læringskurve. Bruk av IKT gir bedre læring. internett som demokratibygger. Tar skrivende roboter over journalistjobber?3</p>
+                </div>
             </div>
         </div>
     </div>
@@ -93,8 +95,8 @@
         <div class="col-sm-12 col-md-6">
             <div class="row">
                 <div class="col-sm-12">
-                    <p id="tema">dybde</p>
-                    <h4>Samfunnsendringer og arbeidsliv</h4>
+                    <p id="category">dybde</p>
+                    <h4 id="heading">Samfunnsendringer og arbeidsliv</h4>
                 </div>
             </div>
 
@@ -114,12 +116,13 @@
             </div>
         </div>
 
+
         <!-- REDAKTØREN HAR ORDET ARTIKKEL -->
         <div class="col-sm-6 col-md-3">
             <div class="row">
                 <div class="col-sm-12">
-                    <p id="tema">Redaktøren har ordet</p>
-                    <h4>redaktøren har ordet</h4>
+                    <p id="category">Redaktøren har ordet</p>
+                    <h4 id="heading">redaktøren har ordet</h4>
                 </div>
             </div>
 
@@ -135,12 +138,13 @@
             </div>
         </div>
 
+
         <!-- DYBDE (TEKST) -->
         <div class="col-sm-6 col-md-3">
             <div class="row">
                 <div class="col-sm-12">
-                    <p id="tema">dybde</p>
-                    <h4>Samfunnsendringer</h4>
+                    <p id="category">dybde</p>
+                    <h4 id="heading">Samfunnsendringer</h4>
                 </div>
             </div>
 
@@ -155,13 +159,14 @@
                 </div>
             </div>
         </div>
+
 
         <!-- AKTUELT (TEKST) -->
         <div class="col-sm-6 col-md-3">
             <div class="row">
                 <div class="col-sm-12">
-                    <p id="tema">Aktuelt</p>
-                    <h4>Bruk av IKT gir bedre læring</h4>
+                    <p id="category">Aktuelt</p>
+                    <h4 id="heading">Bruk av IKT gir bedre læring</h4>
                 </div>
             </div>
 
@@ -177,12 +182,13 @@
             </div>
         </div>
 
+
         <!-- UNG (MED BILDE) ARTIKKEL -->
         <div class="col-sm-12 col-md-6">
             <div class="row">
                 <div class="col-sm-12">
-                    <p id="tema">Ung</p>
-                    <h4>Fremtidens teknologie og et nytt arbeidsliv</h4>
+                    <p id="category">Ung</p>
+                    <h4 id="heading">Fremtidens teknologie og et nytt arbeidsliv</h4>
                 </div>
             </div>
 
@@ -202,12 +208,13 @@
             </div>
         </div>
 
+
         <!-- AKTUELT (TEKST) -->
         <div class="col-sm-6 col-md-3">
             <div class="row">
                 <div class="col-sm-12">
-                    <p id="tema">Aktuelt</p>
-                    <h4>Bruk av IKT gir bedre læring</h4>
+                    <p id="category">Aktuelt</p>
+                    <h4 id="heading">Bruk av IKT gir bedre læring</h4>
                 </div>
             </div>
 
@@ -225,45 +232,43 @@
     </div>
 </div>
 
+
     <!-- FREMHEVET ARTIKKEL -->
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <div class="row">
             <div class="col-sm-6 fremhevet">
                 <img src="img/02.jpg" class="img-responsive">
             </div>
             <div class="col-sm-6 fremhevetText">
-                <p id="dybde_tema"> Dybde </p>
-                <h2 id="dybde_tittel"> FREMHEVET ARTIKKEL</h2>
-                <p id="dybde_innhold"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
+                <p id="category"> Dybde </p>
+                <h2 id="title"> FREMHEVET ARTIKKEL</h2>
+                <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
                 <button type="button" class="sfButton2">LES MER</button>
             </div>
-            </div>
+
         </div>
     </div>
 </div>
 
+
     <!-- SAMFUNNSVITERNE -->
     <div class="container ">
-    <div class="row ">
-        <div class="samfunnBox">
-            <div class="col-sm-6 samfunnsviterne">
-                <img src="img/03.jpg" class="img-responsive">
-                <p><b>Vi viser vei for våre medlemmer</b></p>
-                <p>Er du en samfunnsviter eller humanist med utdanning på masterniå, så hører du hjemme hos oss! Våre medlemmer skal være trygge på at vi er en pådriver fpr deres lønns- og arbeidsbetingelser - at vi aktivt jobber for å heve deres lønnsnivåer og for æ fremme deres økonomiske interesser og faglige kompetanse.</p>  
-                <button type="button" class="sfButton2">LES MER</button>
-            </div>
-            <div class="col-sm-6 samfunnsviterneFordeler">
-                    <li> <img src="img/icon-01.png" > <h4 id="singleFordel">Medlemskap <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
-                    <li> <img src="img/icon-02.png" > <h4 id="singleFordel">Medlemsfordeler <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
-                    <li> <img src="img/icon-03.png" > <h4 id="singleFordel">Kurs og aktiviteter <span class="glyphicon glyphicon-arrow-right"> </h4></li>
-                    <li> <img src="img/icon-04.png" > <h4 id="singleFordel">Arbeid og karriere <span class="glyphicon glyphicon-arrow-right"> </h4></li>                
-            </div>        
+        <div class="row ">
+                <div class="col-sm-6 samfunnsviterne">
+                    <img src="img/03.jpg" class="img-responsive">
+                    <p id="header"> Vi viser vei for våre medlemmer</p>
+                    <p id="content"> Er du en samfunnsviter eller humanist med utdanning på masterniå, så hører du hjemme hos oss! Våre medlemmer skal være trygge på at vi er en pådriver fpr deres lønns- og arbeidsbetingelser - at vi aktivt jobber for å heve deres lønnsnivåer og for æ fremme deres økonomiske interesser og faglige kompetanse.</p>  
+                    <button type="button" class="sfButton2">LES MER</button>
+                </div>
+                <div class="col-sm-6 samfunnsviterneFordeler">
+                        <li> <img src="img/icon-01.png" > <h4 id="singleFordel">Medlemskap <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
+                        <li> <img src="img/icon-02.png" > <h4 id="singleFordel">Medlemsfordeler <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
+                        <li> <img src="img/icon-03.png" > <h4 id="singleFordel">Kurs og aktiviteter <span class="glyphicon glyphicon-arrow-right"> </h4></li>
+                        <li> <img src="img/icon-04.png" > <h4 id="singleFordel">Arbeid og karriere <span class="glyphicon glyphicon-arrow-right"> </h4></li>                
+                </div>        
         </div>
     </div>
-    </div>
-
 
 
     <!-- ANNONSE -->
