--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
     <link rel="stylesheet" type="text/css" href="stylesheets/custom.css" />
 
 
@@ -27,8 +24,8 @@
         <div class="row">
             <div class="col-sm-12 magFront">
                 <div class="row">
-                    <div class="col-sm-6 col-xs-12 magImg">
-                        <div style="background-image: url('img/04.jpg');" class="res-img"></div>
+                    <div class="col-sm-6 hidden-xs magImg">
+                        <div style="background-image: url('img/04.jpg');" class="res-img res-img"></div>
                     </div>
                     <div class="col-sm-6 col-xs-12 magText">
                         <p id="category"><u> Tema - Det nye arbeidslivet - 1/4 </u></p>
@@ -41,6 +38,7 @@
         </div>
     </div>
 </div>
+
 
     <!-- Dybdeartikkel -->
 <div class="fullw-grey">
@@ -316,8 +314,12 @@
         </div>
     </div>
 
-</div>
 
+
+
+<!-- Latest compiled and minified JavaScript -->
+
+<script src="javascripts/bootstrap.min.js"></script>
 
 </body>
 </html>
@@ -325,3 +327,5 @@
 
 
 
+
+                        
