--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 
     <meta charset="UTF-8">
+    <!-- FONTS -->
+    <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6823174/6181552/css/fonts.css" />
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -25,7 +27,7 @@
             <div class="col-sm-12 magFront">
                 <div class="row">
                     <div class="col-sm-6 hidden-xs magImg">
-                        <div style="background-image: url('img/04.jpg');" class="res-img res-img"></div>
+                        <div style="background-image: url('img/04.jpg');" class="res-img"></div>
                     </div>
                     <div class="col-sm-6 col-xs-12 magText">
                         <p id="category"><u> Tema - Det nye arbeidslivet - 1/4 </u></p>
@@ -62,7 +64,7 @@
         <div class="hr-1"></div>
 
     <!-- INNHOLD -->
-        <h2>Innhold</h2>
+        <h2 id="artContent">Innhold</h2>
         <div class="row">
             <div class="hovedArtInnhold">
                 <div class="col-sm-6 col-md-3 fastSpalteArt">
@@ -99,13 +101,13 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-12 dybde dybdeC">
+                <div class="col-sm-12 prevArt artYellow">
                     <div style="background-image: url('img/01.jpg');" class="col-sm-6 img-artikkel">
                     </div>
                     <div class="col-sm-6">
                         <div class="row">
                             <div class="col-sm-12 text-artikkel">
-                                <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                                <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
                                 <button type="button" class="button-les">LES</button>
                             </div>
                         </div>
@@ -120,15 +122,15 @@
             <div class="row">
                 <div class="col-sm-12">
                     <p id="category">Redaktøren har ordet</p>
-                    <h4 id="heading">redaktøren har ordet</h4>
+                    <h4 id="heading">Redaktøren har ordet Redaktøren har ordet Redaktøren har ordet </h4>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="dybde harOrdet">
+                    <div class="prevArt artGreen">
                         <div class="text-artikkel">
-                            <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                            <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
                             <button type="button" class="button-les">LES</button>
                         </div>
                     </div>
@@ -148,9 +150,9 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="dybde dybdeC">
+                    <div class="prevArt artGrey">
                         <div class="text-artikkel">
-                            <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                            <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
                             <button type="button" class="button-les">LES</button>
                         </div>
                     </div>
@@ -170,9 +172,9 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="dybde dybdeC">
+                    <div class="prevArt artGrey">
                         <div class="text-artikkel">
-                            <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                            <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
                             <button type="button" class="button-les">LES</button>
                         </div>
                     </div>
@@ -191,13 +193,13 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-12 dybde ungC">
+                <div class="col-sm-12 prevArt artYellow">
                     <div style="background-image: url('img/01.jpg');" class="col-sm-6 img-artikkel">
                     </div>
                     <div class="col-sm-6">
                         <div class="row">
                             <div class="col-sm-12 text-artikkel">
-                                <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                                <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
                                 <button type="button" class="button-les">LES</button>
                             </div>
                         </div>
@@ -218,9 +220,9 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="dybde dybdeC">
+                    <div class="prevArt artGrey">
                         <div class="text-artikkel">
-                            <p>Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                            <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
                             <button type="button" class="button-les">LES</button>
                         </div>
                     </div>
@@ -253,17 +255,22 @@
     <!-- SAMFUNNSVITERNE -->
     <div class="container ">
         <div class="row ">
-                <div class="col-sm-6 samfunnsviterne">
-                    <img src="img/03.jpg" class="img-responsive">
-                    <p id="header"> Vi viser vei for våre medlemmer</p>
-                    <p id="content"> Er du en samfunnsviter eller humanist med utdanning på masterniå, så hører du hjemme hos oss! Våre medlemmer skal være trygge på at vi er en pådriver fpr deres lønns- og arbeidsbetingelser - at vi aktivt jobber for å heve deres lønnsnivåer og for æ fremme deres økonomiske interesser og faglige kompetanse.</p>  
-                    <button type="button" class="sfButton2">LES MER</button>
+                <div class="col-sm-6">
+                    <div class="samfunnsviterne">
+                        <img src="img/03.jpg" class="img-responsive">
+                        <p id="header"> Vi viser vei for våre medlemmer</p>
+                        <p id="content"> Er du en samfunnsviter eller humanist med utdanning på masterniå, så hører du hjemme hos oss! Våre medlemmer skal være trygge på at vi er en pådriver fpr deres lønns- og arbeidsbetingelser - at vi aktivt jobber for å heve deres lønnsnivåer og for æ fremme deres økonomiske interesser og faglige kompetanse.</p>  
+                        <button type="button" class="sfButton2">LES MER</button>
+                    </div>
                 </div>
-                <div class="col-sm-6 samfunnsviterneFordeler">
+
+                <div class="col-sm-6">
+                    <div class="samfunnsviterneFordeler">
                         <li> <img src="img/icon-01.png" > <h4 id="singleFordel">Medlemskap <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
                         <li> <img src="img/icon-02.png" > <h4 id="singleFordel">Medlemsfordeler <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
                         <li> <img src="img/icon-03.png" > <h4 id="singleFordel">Kurs og aktiviteter <span class="glyphicon glyphicon-arrow-right"> </h4></li>
                         <li> <img src="img/icon-04.png" > <h4 id="singleFordel">Arbeid og karriere <span class="glyphicon glyphicon-arrow-right"> </h4></li>                
+                    </div>
                 </div>        
         </div>
     </div>
