--- a/index.html
+++ b/index.html
@@ -266,10 +266,10 @@
 
                 <div class="col-sm-6">
                     <div class="samfunnsviterneFordeler">
-                        <li> <img src="img/icon-01.png" > <h4 id="singleFordel">Medlemskap <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
-                        <li> <img src="img/icon-02.png" > <h4 id="singleFordel">Medlemsfordeler <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
-                        <li> <img src="img/icon-03.png" > <h4 id="singleFordel">Kurs og aktiviteter <span class="glyphicon glyphicon-arrow-right"> </h4></li>
-                        <li> <img src="img/icon-04.png" > <h4 id="singleFordel">Arbeid og karriere <span class="glyphicon glyphicon-arrow-right"> </h4></li>                
+                        <li> <img src="img/svt-ikon-wht-01.png" > <h4 id="singleFordel">Medlemskap <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
+                        <li> <img src="img/svt-ikon-wht-02.png" > <h4 id="singleFordel">Medlemsfordeler <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
+                        <li> <img src="img/svt-ikon-wht-03.png" > <h4 id="singleFordel">Kurs og aktiviteter <span class="glyphicon glyphicon-arrow-right"> </h4></li>
+                        <li> <img src="img/svt-ikon-wht-04.png" > <h4 id="singleFordel">Arbeid og karriere <span class="glyphicon glyphicon-arrow-right"> </h4></li>                
                     </div>
                 </div>        
         </div>
@@ -308,7 +308,7 @@
                             <p>E-post post@samfunnsviterne.no</p>
                         </div>
                         <div class="col-sm-4">
-                            <img src="img/03.jpg" class="img-responsive">
+                            <img src="img/svt-logo-wht.png" class="img-responsive">
                         </div>
                     </div>
                         <div class="row">
