--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <!-- FONTS -->
-    <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6823174/6181552/css/fonts.css" />
+    <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6823174/6134172/css/fonts.css" />
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -101,7 +101,7 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-12 prevArt artYellow">
+                <div class="col-sm-12 prevArt artGrey">
                     <div style="background-image: url('img/01.jpg');" class="col-sm-6 img-artikkel">
                     </div>
                     <div class="col-sm-6">
@@ -122,7 +122,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <p id="category">Redaktøren har ordet</p>
-                    <h4 id="heading">Redaktøren har ordet Redaktøren har ordet Redaktøren har ordet </h4>
+                    <h4 id="heading">Redaktøren har ordet Redaktøren har ordet</h4>
                 </div>
             </div>
 
@@ -194,7 +194,7 @@
 
             <div class="row">
                 <div class="col-sm-12 prevArt artYellow">
-                    <div style="background-image: url('img/01.jpg');" class="col-sm-6 img-artikkel">
+                    <div style="background-image: url('img/05.jpg');" class="col-sm-6 img-artikkel">
                     </div>
                     <div class="col-sm-6">
                         <div class="row">
@@ -257,7 +257,7 @@
         <div class="row ">
                 <div class="col-sm-6">
                     <div class="samfunnsviterne">
-                        <img src="img/03.jpg" class="img-responsive">
+                        <img src="img/svt-logo.png" class="img-responsive">
                         <p id="header"> Vi viser vei for våre medlemmer</p>
                         <p id="content"> Er du en samfunnsviter eller humanist med utdanning på masterniå, så hører du hjemme hos oss! Våre medlemmer skal være trygge på at vi er en pådriver fpr deres lønns- og arbeidsbetingelser - at vi aktivt jobber for å heve deres lønnsnivåer og for æ fremme deres økonomiske interesser og faglige kompetanse.</p>  
                         <button type="button" class="sfButton2">LES MER</button>
@@ -266,10 +266,10 @@
 
                 <div class="col-sm-6">
                     <div class="samfunnsviterneFordeler">
-                        <li> <img src="img/icon-01.png" > <h4 id="singleFordel">Medlemskap <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
-                        <li> <img src="img/icon-02.png" > <h4 id="singleFordel">Medlemsfordeler <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
-                        <li> <img src="img/icon-03.png" > <h4 id="singleFordel">Kurs og aktiviteter <span class="glyphicon glyphicon-arrow-right"> </h4></li>
-                        <li> <img src="img/icon-04.png" > <h4 id="singleFordel">Arbeid og karriere <span class="glyphicon glyphicon-arrow-right"> </h4></li>                
+                        <li> <img src="img/svt-ikon-wht-01.png" > <h4 id="singleFordel">Medlemskap <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
+                        <li> <img src="img/svt-ikon-wht-02.png" > <h4 id="singleFordel">Medlemsfordeler <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
+                        <li> <img src="img/svt-ikon-wht-03.png" > <h4 id="singleFordel">Kurs og aktiviteter <span class="glyphicon glyphicon-arrow-right"> </h4></li>
+                        <li> <img src="img/svt-ikon-wht-04.png" > <h4 id="singleFordel">Arbeid og karriere <span class="glyphicon glyphicon-arrow-right"> </h4></li>                
                     </div>
                 </div>        
         </div>
@@ -308,7 +308,7 @@
                             <p>E-post post@samfunnsviterne.no</p>
                         </div>
                         <div class="col-sm-4">
-                            <img src="img/03.jpg" class="img-responsive">
+                            <img src="img/svt-logo-wht.png" class="img-responsive">
                         </div>
                     </div>
                         <div class="row">
