--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="col-sm-12 col-md-6">
             <div class="row">
                 <div class="col-sm-12">
-                    <p id="category">dybde</p>
+                    <p id="category">Dybde</p>
                     <h4 id="heading">Samfunnsendringer og arbeidsliv</h4>
                 </div>
             </div>
@@ -143,7 +143,7 @@
         <div class="col-sm-6 col-md-3">
             <div class="row">
                 <div class="col-sm-12">
-                    <p id="category">dybde</p>
+                    <p id="category">Dybde</p>
                     <h4 id="heading">Samfunnsendringer</h4>
                 </div>
             </div>
@@ -260,7 +260,7 @@
                         <img src="img/svt-logo.png" class="img-responsive">
                         <p id="header"> Vi viser vei for våre medlemmer</p>
                         <p id="content"> Er du en samfunnsviter eller humanist med utdanning på masterniå, så hører du hjemme hos oss! Våre medlemmer skal være trygge på at vi er en pådriver fpr deres lønns- og arbeidsbetingelser - at vi aktivt jobber for å heve deres lønnsnivåer og for æ fremme deres økonomiske interesser og faglige kompetanse.</p>  
-                        <button type="button" class="sfButton2">LES MER</button>
+                        <button type="button" class="sfButton2">LES MER PÅ SAMFUNNSVITEREN.NO</button>
                     </div>
                 </div>
 
@@ -303,9 +303,17 @@
                             
                         </div>
                         <div class="col-sm-4">
-                            <h3>Kontakt oss</h2>
-                            <p>Telefon 12 34 56 78</p>
-                            <p>E-post post@samfunnsviterne.no</p>
+                            <div class="row">
+                                <h3>Kontakt oss</h2>
+                                <div class="col-sm-4">
+                                    <p>Telefon</p>
+                                    <p>E-post</p>
+                                </div>
+                                <div class="col-sm-8">
+                                    <p>12 34 56 78</p>
+                                    <p>post@samfunnsviterne.no</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-sm-4">
                             <img src="img/svt-logo-wht.png" class="img-responsive">
