--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li id="tidUtg"> <a href="#">Tidligere Utgivelser</a></li>
-        <li id="bliMedlem"> <a href="#">Bli medlem </a></li>
+        <li id="bliMedlem"> <a href="medlem.html">Bli medlem </a></li>
         <li id="linkSam"> <a href="#">Samfunnsviterne.no </a></li>
         <li> <img src="img/logo-01.png" style="height : 50px;"></li>
       </ul>
